<!-- Ryan Pickelsimer
 Full Documentation at TaskManager/REASDME.txt -->

<resources>
    <string name="app_name">Task Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_task">AddTaskActivity</string>

    <!-- strings used in Views -->
    <string name="task_name">Task Name</string>
    <string name="task_type">Task Type</string>
    <string name="date_time">Date/Time</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>

    <!-- spinner entries -->
    <string-array name="task_types">
        <item>Personal</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>

</resources>
