<?xml version="1.0" encoding="utf-8"?>

<!-- Ryan Pickelsimer
 Full Documentation at TaskManager/REASDME.txt -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <!-- Task name, type, date/time headers -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:id="@+id/tv_Name"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_type"
            android:id="@+id/tv_Type"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:id="@+id/tv_DateTime"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- black line separator -->
    <View
        android:layout_height="2dip"
        android:background="#000000"
        android:layout_width="match_parent" />

    <!-- scrollable table for dynamic entries -->
    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            android:id="@+id/TableLayout01">

        </TableLayout>

    </ScrollView>

    <!-- goes to AddTaskActivity -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:id="@+id/btn_AddTask"
        android:layout_gravity="center_horizontal"
        android:onClick="onAddTaskClick" />

</LinearLayout>
